--- a/dhl_leave_management/pubspec.yaml
+++ b/dhl_leave_management/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dhl_leave_management
-description: DHL Employee Leave Management System
+description: DHL Employee Leave Management System for Nina
 
 publish_to: 'none'
 version: 1.0.0+1
@@ -18,12 +18,12 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.18.1
   flutter_datetime_picker_plus: ^2.1.0
-  flutter_svg: ^2.0.7
   file_picker: ^5.3.3
+  excel: ^2.1.0
   google_fonts: ^5.1.0
   fl_chart: ^0.63.0
-  http: ^1.1.0
   data_table_2: ^2.5.8
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
