--- a/dhl_leave_management/pubspec.yaml
+++ b/dhl_leave_management/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   intl: ^0.20.2
   flutter_datetime_picker_plus: ^2.1.0
   file_picker: ^10.1.9
-  excel: ^4.0.6
   google_fonts: ^6.2.1
   fl_chart: ^1.0.0
   data_table_2: ^2.5.8
@@ -26,6 +25,8 @@ dependencies:
   flutter_svg: ^2.1.0
   cached_network_image: ^3.2.3
   image_picker: ^0.8.7+3
+  excel: ^4.0.6
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
