--- a/dhl_leave_management/pubspec.yaml
+++ b/dhl_leave_management/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.8.7+3
   excel: ^4.0.6
   collection: ^1.18.0
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
